# EVC_final_project

./: Dockerfile  README.md
traffic_ws/devel/: .catkin  .rosinstall
traffic_ws/devel/lib/pkgconfig/: base.pc
traffic_ws/devel/share/base/cmake/: base-msg-paths.cmake  baseConfig.cmake
traffic_ws/devel/share/roseus/ros/base/: manifest.l
traffic_ws/src/: startup.sh
traffic_ws/src/base/: CMakeLists.txt  dependencies.txt  package.xml  requirements.txt
traffic_ws/src/base/config/: parameters.yaml
traffic_ws/src/base/launch/: calibration.launch  final_subscriber.launch  processing_barcode.launch  processing_gestures.launch  processing_motion_det.launch  publisher.launch  view.launch
traffic_ws/src/base/src/: Dockerfile  calibration_node.py  decision_node.py  final_subscriber_node.py  final_subscriber_node_line.py  line_detection.py  processing_node_barcode.py  processing_node_colour.py  processing_node_gestures.py  processing_node_line.py  processing_node_motion_det.py  processing_node_yolo.py  publisher_node_color.py  view_node.py
traffic_ws/src/base/src/motors_lib/: encoderDriver.py
